[tool.poetry]
name = "03-youtube-download"
version = "0.1.0"
description = ""
authors = ["David <djsy1414@gmail.com>"]
readme = "README.md"
packages = [{include = "03_youtube_download"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pytube = "^15.0.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
